--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Agency</title>
-    <link href="/Users/irinamarikhina/Documents/Codecademy/git_projects/Event_Agency/styles.css" type="text/css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Staatliches&display=swap" rel="stylesheet"> 
-    <link rel="shortcut icon" href="/Users/irinamarikhina/Documents/Codecademy/git_projects/Event_Agency/resources/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="resources/favicon-16x16.png" type="image/x-icon">
 </head>
 
 <body> 
@@ -94,7 +94,7 @@
 
           <div class="teammate">
             <div class="photo">
-              <img src="/Users/irinamarikhina/Documents/Codecademy/git_projects/Event_Agency/resources/staff-1.jpeg" />
+              <img src="resources/staff-1.jpeg" />
             </div>
             <div class="info">
               <p>Jane Smith, Creative Director</p>
@@ -103,7 +103,7 @@
 
           <div class="teammate">
             <div class="photo">
-              <img src="/Users/irinamarikhina/Documents/Codecademy/git_projects/Event_Agency/resources/staff-2.jpeg" />
+              <img src="resources/staff-2.jpeg" />
             </div>
             <div class="info">
               <p>John Smith, Head of Events</p>
@@ -112,7 +112,7 @@
 
           <div class="teammate">
             <div class="photo">
-              <img src="/Users/irinamarikhina/Documents/Codecademy/git_projects/Event_Agency/resources/staff-3.jpeg" />
+              <img src="resources/staff-3.jpeg" />
             </div>
             <div class="info">
               <p>Joanne Smith, Event Manager</p>
